--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <h1>Example Phishing Website</h1>
+    <h1>Example Phishing Page</h1>
     <div class="container">
         <h2>Login Form</h2>
         <form action="#" method="post">
